# facet-ir

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: Facet-IR-founding-design-v1.md  Facet-IR-v2-implementation-plan.md  Facet-IR-v2-specification.md  Facet-IR-v2.1-comment-syntax.md  Facet-implementation-plan-gen1.md  Facet-kernel-directives.md  Facet-v3-implementation-plan.md  Facet-v3-spec.md  audit-perf-gaps.md  audit-report-2.md  audit-report.md  audit-v3-status.md  encoding-decisions.md  examples.md  kernels.md  plan-cli-repl.md  plan-kernel-eval.md  plan-lsp-native.md  plan-vscode-extension.md  spec.md
include/facet/: facet.hpp
nbs/: kernel_server.py  test.facetnb
nbs/img/test/: ai_eval_log.md
src/: ast.cpp  facet.cpp  facet_cli.cpp  facet_internal.hpp  lexer.cpp  registry.cpp  sympy.cpp
tests/: test_cli.sh  test_facet.cpp
tests/corpus/: gen1.txt  v2-m1.txt
